--- a/css/main.css
+++ b/css/main.css
@@ -157,3 +157,14 @@ body {
   position: relative;
   height: 100%;
 }
+
+	  
+	  .trash {
+        width: 100px; 
+        height: 100px; 
+		
+		position: absolute;
+        bottom: 0px;
+		right: 0px;
+		background-color: blue;
+	  }
