--- a/sass/main.sass
+++ b/sass/main.sass
@@ -11,7 +11,7 @@ body
 #draggable
 	width: 273px
 	height: 195px
-	background-image: url("../roomplans/kitchen.png")
+	background-image: url("../roomplans/dining.png")
 	background-repeat: no-repeat
 	background-size: 100%
 	background-position: 0px  0px
@@ -55,7 +55,7 @@ body
 
 	div 
 		@include transition-property(left, top)
-		@include transition-duration(0.10s)
+		@include transition-duration(0.05s)
 		overflow: hidden
 		-webkit-box-sizing: border-box
 		-moz-box-sizing: border-box
@@ -66,9 +66,19 @@ body
 		img 
 			display: block
 
-		.ui-resizable, .ui-icon-gripsmall-diagonal-se, .ui-resizable-e, .ui-resizable-s
+		.ui-resizable, .ui-icon-gripsmall-diagonal-se, .ui-resizable-e, .ui-resizable-s, .SqMeter
 			border: 0
 
+		&.ui-draggable-dragging
+			border: 1px solid red !important
+
+		.info 
+			text-align: center
+			display: none
+
+		&:hover
+			.info 
+				display: block
 
 .Menu
 	width: 250px
@@ -88,3 +98,10 @@ body
 #wrapper
 	position: relative
 	height: 100%
+
+.trash 
+	position: absolute
+	bottom: 15px 
+	right: 15px
+	width: 60px 
+	height: 60px
