--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,16 @@ body {
 .Menu .summary span {
   color: white;
 }
+.Menu .button {
+  color: white;
+  padding: 10px;
+  border: 1px solid white;
+  cursor: pointer;
+  margin: 15px;
+}
+.Menu .button:active {
+  background-color: red;
+}
 
 .SqMeter {
   float: left;
