--- a/sass/main.sass
+++ b/sass/main.sass
@@ -96,9 +96,20 @@ body
 		bottom: 15px
 		left: 15px
 
-
 		span 
 			color: white
+
+	#controls
+
+	.button
+		color: white
+		padding: 10px 
+		border: 1px solid white
+		cursor: pointer 
+		margin: 15px
+
+		&:active 
+			background-color: red
 
 .SqMeter
 	float: left
