--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,6 @@ body {
 }
 .sandbox div .info {
   text-align: center;
-  display: none;
 }
 .sandbox div:hover .info {
   display: block;
@@ -191,4 +190,17 @@ body {
   right: 15px;
   width: 60px;
   height: 60px;
+}
+
+.table {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+
+.table-cell {
+  display: table-cell;
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
 }
