--- a/sass/main.sass
+++ b/sass/main.sass
@@ -76,7 +76,6 @@ body
 
 		.info 
 			text-align: center
-			display: none
 
 		&:hover
 			.info 
@@ -124,3 +123,14 @@ body
 	right: 15px
 	width: 60px 
 	height: 60px
+
+.table
+	display: table
+	width: 100%
+	height: 100%
+
+.table-cell
+	display: table-cell
+	width: 100%
+	height: 100%
+	vertical-align: middle
