--- a/sass/main.sass
+++ b/sass/main.sass
@@ -89,6 +89,10 @@ body
 	top: 0
 	bottom: 0
 
+	h2 
+		color: white
+		margin: 15px
+
 	.summary
 		position: absolute
 		bottom: 15px
@@ -98,13 +102,42 @@ body
 			color: white
 
 	#controls
+		margin-top: -20px
 
 	.button
 		color: white
-		padding: 10px 
-		border: 1px solid white
-		cursor: pointer 
-		margin: 15px
+		cursor: pointer
+		width: 100px
+		text-align: center
+		float: left
+		margin-top: 20px
+
+		span 
+			background-image: url("../images/sprites.png")
+			width: 40px
+			height: 40px
+			overflow: hidden
+			background-repeat: no-repeat
+			display: inline-block
+
+		p 
+			font-size: 14px
+
+		&.add-kitchen
+			span
+				background-position: -40px 0px
+
+		&.add-livingroom
+			span
+				background-position: 0px 0px
+
+		&.add-bathroom
+			span
+				background-position: 0px -40px
+
+		&.add-custom
+			span
+				background-position: -40px -40px
 
 		&:active 
 			background-color: red
