--- a/sass/main.sass
+++ b/sass/main.sass
@@ -89,9 +89,16 @@ body
 	top: 0
 	bottom: 0
 
+	.inside
+		padding: 25px
+
 	h2 
 		color: white
-		margin: 15px
+		font-weight: 400
+
+	#logo 
+		display: block
+		margin-bottom: 20px
 
 	.summary
 		position: absolute
@@ -102,20 +109,21 @@ body
 			color: white
 
 	#controls
-		margin-top: -20px
+		margin-top: 20px
+		margin-left: -40px
 
 	.button
 		color: white
 		cursor: pointer
-		width: 100px
 		text-align: center
 		float: left
+		margin-left: 40px
 		margin-top: 20px
 
 		span 
 			background-image: url("../images/sprites.png")
 			width: 40px
-			height: 40px
+			height: 35px
 			overflow: hidden
 			background-repeat: no-repeat
 			display: inline-block
@@ -140,7 +148,7 @@ body
 				background-position: -40px -40px
 
 		&:active 
-			background-color: red
+			opacity: 0.7
 
 .SqMeter
 	float: left
@@ -149,12 +157,6 @@ body
 	position: relative
 	height: 100%
 
-.trash 
-	position: absolute
-	bottom: 15px 
-	right: 15px
-	width: 60px 
-	height: 60px
 
 .table
 	display: table
@@ -166,3 +168,15 @@ body
 	width: 100%
 	height: 100%
 	vertical-align: middle
+
+.trash
+	width: 40px
+	height: 40px
+	position: absolute
+	bottom: 25px
+	right: 25px
+	background-image: url("../images/sprites.png")
+	background-repeat: no-repeat
+	background-position: 0px -80px
+	border: 0px
+
