--- a/sass/main.sass
+++ b/sass/main.sass
@@ -76,6 +76,11 @@ body
 
 		.info 
 			text-align: center
+			height: 100%
+
+			span 
+				display: block
+
 		&:hover
 			.info 
 				display: block
