--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,7 @@ body {
   background-color: #f2f2f2;
   font-family: "Roboto", sans-serif;
   line-height: 1.4;
+  letter-spacing: 0.1em;
 }
 
 #kitchen {
@@ -169,27 +170,64 @@ body {
 }
 .Menu #logo {
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
 .Menu .summary {
-  position: absolute;
-  bottom: 15px;
-  left: 15px;
+  overflow: hidden;
+  clear: both;
+  margin: 25px;
+  padding-top: 25px;
+  border-top: 1px solid gray;
 }
 .Menu .summary span {
   color: white;
+  font-size: 14px;
+  display: block;
+}
+.Menu .summary span sup {
+  font-size: 12px;
+  position: relative;
+  top: -3px;
+}
+.Menu .summary a.share {
+  display: block;
+  height: 50px;
+  line-height: 50px;
+  background-color: #36c3a4;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  width: auto;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: 40px;
 }
 .Menu #controls {
   margin-top: 20px;
   margin-left: -40px;
+  overflow: hidden;
 }
 .Menu .button {
   color: white;
   cursor: pointer;
   text-align: center;
   float: left;
-  margin-left: 40px;
+  margin-left: 45px;
   margin-top: 20px;
+  -webkit-transition-property: opacity;
+  -moz-transition-property: opacity;
+  -o-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
 }
 .Menu .button span {
   background-image: url("../images/sprites.png");
@@ -214,7 +252,7 @@ body {
 .Menu .button.add-custom span {
   background-position: -40px -40px;
 }
-.Menu .button:active {
+.Menu .button:hover {
   opacity: 0.7;
 }
 
