--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,6 +9,7 @@ body
 	background-color: #f2f2f2
 	font-family: 'Roboto', sans-serif
 	line-height: 1.4
+	letter-spacing: 0.1em
 
 #kitchen
 	width: 273px
@@ -103,27 +104,54 @@ body
 
 	#logo 
 		display: block
-		margin-bottom: 20px
+		margin-bottom: 50px
 
 	.summary
-		position: absolute
-		bottom: 15px
-		left: 15px
+		overflow: hidden 
+		clear: both 
+		margin: 25px
+		padding-top: 25px
+		border-top: 1px solid gray
 
 		span 
 			color: white
+			font-size: 14px
+			display: block
+
+			sup 
+				font-size: 12px
+				position: relative
+				top: -3px
+
+		a.share 
+			display: block
+			height: 50px
+			line-height: 50px
+			background-color: #36c3a4
+			@include border-radius(4px)
+			width: auto
+			text-align: center
+			color: white
+			text-decoration: none
+			text-transform: uppercase
+			font-size: 14px
+			font-weight: bold
+			margin-top: 40px
 
 	#controls
 		margin-top: 20px
 		margin-left: -40px
+		overflow: hidden
 
 	.button
 		color: white
 		cursor: pointer
 		text-align: center
 		float: left
-		margin-left: 40px
+		margin-left: 45px
 		margin-top: 20px
+		@include transition-property(opacity)
+		@include transition-duration(0.20s)
 
 		span 
 			background-image: url("../images/sprites.png")
@@ -152,7 +180,7 @@ body
 			span
 				background-position: -40px -40px
 
-		&:active 
+		&:hover 
 			opacity: 0.7
 
 .SqMeter
