--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,7 @@ body {
   background-image: url("../roomplans/LIVINGROOM_FULL.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: transparent;
 }
 
 #draggable3 {
@@ -89,30 +90,15 @@ body {
   background-image: url("../roomplans/BEDROOM_FULL_2.png");
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-#draggable4 {
-  width: 100px;
-  height: 100px;
-}
-
-#droppable5 {
-  width: 150px;
-  height: 150px;
-}
-
-#draggable6 {
-  width: 60px;
-  height: 20px;
+  background-color: transparent;
 }
 
 .sandbox {
-  background-color: #fefefe;
   width: auto;
   height: 100%;
   overflow: auto;
   position: absolute;
-  left: 250px;
+  left: 295px;
   right: 0;
   top: 0;
   bottom: 0;
@@ -154,12 +140,16 @@ body {
 
 .Menu {
   width: 250px;
-  height: 100%;
-  background-color: #333333;
+  background-image: url("../images/menu-bg.png");
   position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
+  left: 25px;
+  top: 25px;
+  bottom: 25px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
 }
 .Menu .inside {
   padding: 25px;
@@ -203,7 +193,6 @@ body {
   text-align: center;
   color: white;
   text-decoration: none;
-  text-transform: uppercase;
   font-size: 14px;
   font-weight: bold;
   margin-top: 40px;
@@ -287,5 +276,6 @@ body {
   background-image: url("../images/sprites.png");
   background-repeat: no-repeat;
   background-position: 0px -80px;
+  background-color: transparent;
   border: 0px;
 }
