--- a/sass/main.sass
+++ b/sass/main.sass
@@ -25,6 +25,7 @@ body
 	background-image: url("../roomplans/LIVINGROOM_FULL.png")
 	background-repeat: no-repeat
 	background-size: cover
+	background-color: transparent
 
 #draggable3
 	width: 273px
@@ -32,26 +33,15 @@ body
 	background-image: url("../roomplans/BEDROOM_FULL_2.png")
 	background-repeat: no-repeat
 	background-size: cover
+	background-color: transparent
 
-#draggable4
-	width: 100px
-	height: 100px
-
-#droppable5
-	width: 150px
-	height: 150px
-
-#draggable6
-	width: 60px
-	height: 20px
 
 .sandbox
-	background-color: #fefefe
 	width: auto
 	height: 100%
 	overflow: auto
 	position: absolute
-	left: 250px
+	left: 295px
 	right: 0
 	top: 0
 	bottom: 0
@@ -88,12 +78,12 @@ body
 
 .Menu
 	width: 250px
-	height: 100%
-	background-color: #333
+	background-image: url("../images/menu-bg.png")
 	position: absolute
-	left: 0
-	top: 0
-	bottom: 0
+	left: 25px
+	top: 25px
+	bottom: 25px
+	@include border-radius(4px)
 
 	.inside
 		padding: 25px
@@ -133,7 +123,6 @@ body
 			text-align: center
 			color: white
 			text-decoration: none
-			text-transform: uppercase
 			font-size: 14px
 			font-weight: bold
 			margin-top: 40px
@@ -211,5 +200,6 @@ body
 	background-image: url("../images/sprites.png")
 	background-repeat: no-repeat
 	background-position: 0px -80px
+	background-color: transparent
 	border: 0px
 
