--- a/css/main.css
+++ b/css/main.css
@@ -73,23 +73,6 @@ body {
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: 0px 0px;
-}
-
-#draggable2 {
-  width: 273px;
-  height: 195px;
-  background-image: url("../roomplans/LIVINGROOM_FULL.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: transparent;
-}
-
-#draggable3 {
-  width: 273px;
-  height: 195px;
-  background-image: url("../roomplans/BEDROOM_FULL_2.png");
-  background-repeat: no-repeat;
-  background-size: cover;
   background-color: transparent;
 }
 
@@ -113,9 +96,6 @@ body {
   -o-transition-duration: 0.05s;
   transition-duration: 0.05s;
   overflow: hidden;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   border: 1px solid gray;
 }
 .sandbox .drag img {
@@ -131,8 +111,13 @@ body {
   text-align: center;
   height: 100%;
 }
-.sandbox .drag .info span {
+.sandbox .drag .info p {
   display: block;
+  font-size: 14px;
+  clear: both;
+}
+.sandbox .drag .info p:first-child {
+  font-weight: bold;
 }
 .sandbox .drag:hover .info {
   display: block;
@@ -243,10 +228,6 @@ body {
 }
 .Menu .button:hover {
   opacity: 0.7;
-}
-
-.SqMeter {
-  float: left;
 }
 
 #wrapper {
