--- a/sass/main.sass
+++ b/sass/main.sass
@@ -18,21 +18,6 @@ body
 	background-repeat: no-repeat
 	background-size: 100%
 	background-position: 0px  0px
-
-#draggable2
-	width: 273px
-	height: 195px
-	background-image: url("../roomplans/LIVINGROOM_FULL.png")
-	background-repeat: no-repeat
-	background-size: cover
-	background-color: transparent
-
-#draggable3
-	width: 273px
-	height: 195px
-	background-image: url("../roomplans/BEDROOM_FULL_2.png")
-	background-repeat: no-repeat
-	background-size: cover
 	background-color: transparent
 
 
@@ -50,9 +35,6 @@ body
 		@include transition-property(left, top)
 		@include transition-duration(0.05s)
 		overflow: hidden
-		-webkit-box-sizing: border-box
-		-moz-box-sizing: border-box
-		box-sizing: border-box
 		border: 1px solid gray
 
 
@@ -69,9 +51,13 @@ body
 			text-align: center
 			height: 100%
 
-			span 
+			p
 				display: block
+				font-size: 14px 
+				clear: both
 
+				&:first-child 
+					font-weight: bold
 		&:hover
 			.info 
 				display: block
@@ -171,9 +157,6 @@ body
 
 		&:hover 
 			opacity: 0.7
-
-.SqMeter
-	float: left
 
 #wrapper
 	position: relative
