--- a/css/main.css
+++ b/css/main.css
@@ -67,9 +67,29 @@ body {
 }
 
 #kitchen {
-  width: 273px;
-  height: 195px;
+  width: 200px;
+  height: 200px;
   background-image: url("../roomplans/dining.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: 0px 0px;
+  background-color: transparent;
+}
+
+#living-room {
+  width: 300px;
+  height: 200px;
+  background-image: url("../roomplans/LIVINGROOM_FULL.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: 0px 0px;
+  background-color: transparent;
+}
+
+#bathroom {
+  width: 125px;
+  height: 125px;
+  background-image: url("../roomplans/BATHROOM_2.png");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: 0px 0px;
@@ -110,6 +130,19 @@ body {
 .sandbox .drag .info {
   text-align: center;
   height: 100%;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -webkit-transition-property: opacity;
+  -moz-transition-property: opacity;
+  -o-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
 }
 .sandbox .drag .info p {
   display: block;
@@ -120,7 +153,9 @@ body {
   font-weight: bold;
 }
 .sandbox .drag:hover .info {
-  display: block;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+  background-image: url("../images/trans.png");
 }
 
 .Menu {
