--- a/sass/main.sass
+++ b/sass/main.sass
@@ -4,6 +4,7 @@
 html, body
 	width: 100%
 	height: 100%
+	background-image: url("../images/grid.png")
 
 body 
 	background-color: #f2f2f2
@@ -19,6 +20,9 @@ body
 	background-size: 100%
 	background-position: 0px  0px
 	background-color: transparent
+	-webkit-box-sizing: border-box
+	-moz-box-sizing: border-box
+	box-sizing: border-box
 
 #living-room
 	width: 300px
@@ -28,6 +32,9 @@ body
 	background-repeat: no-repeat
 	background-position: 0px  0px
 	background-color: transparent
+	-webkit-box-sizing: border-box
+	-moz-box-sizing: border-box
+	box-sizing: border-box
 
 #bathroom
 	width: 125px
@@ -37,14 +44,16 @@ body
 	background-size: 100%
 	background-position: 0px  0px
 	background-color: transparent
-
+	-webkit-box-sizing: border-box
+	-moz-box-sizing: border-box
+	box-sizing: border-box
 
 .sandbox
 	width: auto
 	height: 100%
 	overflow: auto
 	position: absolute
-	left: 295px
+	left: 299px
 	right: 0
 	top: 0
 	bottom: 0
