--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 html, body {
   width: 100%;
   height: 100%;
+  background-image: url("../images/grid.png");
 }
 
 body {
@@ -74,6 +75,9 @@ body {
   background-size: 100%;
   background-position: 0px 0px;
   background-color: transparent;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #living-room {
@@ -84,6 +88,9 @@ body {
   background-repeat: no-repeat;
   background-position: 0px 0px;
   background-color: transparent;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #bathroom {
@@ -94,6 +101,9 @@ body {
   background-size: 100%;
   background-position: 0px 0px;
   background-color: transparent;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .sandbox {
@@ -101,7 +111,7 @@ body {
   height: 100%;
   overflow: auto;
   position: absolute;
-  left: 295px;
+  left: 299px;
   right: 0;
   top: 0;
   bottom: 0;
