--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,19 @@ body {
   box-sizing: border-box;
 }
 
+#bedroom {
+  width: 250px;
+  height: 175px;
+  background-image: url("../roomplans/BEDROOM_FULL_2.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: 0px 0px;
+  background-color: transparent;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 .sandbox {
   width: auto;
   height: 100%;
@@ -241,15 +254,14 @@ body {
 }
 .Menu #controls {
   margin-top: 20px;
-  margin-left: -40px;
   overflow: hidden;
+  text-align: center;
 }
 .Menu .button {
   color: white;
   cursor: pointer;
   text-align: center;
   float: left;
-  margin-left: 45px;
   margin-top: 20px;
   -webkit-transition-property: opacity;
   -moz-transition-property: opacity;
@@ -259,6 +271,8 @@ body {
   -moz-transition-duration: 0.2s;
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
+  width: 100px;
+  display: inline-block;
 }
 .Menu .button span {
   background-image: url("../images/sprites.png");
@@ -280,7 +294,7 @@ body {
 .Menu .button.add-bathroom span {
   background-position: 0px -40px;
 }
-.Menu .button.add-custom span {
+.Menu .button.add-bedroom span {
   background-position: -40px -40px;
 }
 .Menu .button:hover {
