--- a/sass/main.sass
+++ b/sass/main.sass
@@ -48,6 +48,18 @@ body
 	-moz-box-sizing: border-box
 	box-sizing: border-box
 
+#bedroom
+	width: 250px
+	height: 175px
+	background-image: url("../roomplans/BEDROOM_FULL_2.png")
+	background-repeat: no-repeat
+	background-size: 100%
+	background-position: 0px  0px
+	background-color: transparent
+	-webkit-box-sizing: border-box
+	-moz-box-sizing: border-box
+	box-sizing: border-box
+
 .sandbox
 	width: auto
 	height: 100%
@@ -156,18 +168,19 @@ body
 
 	#controls
 		margin-top: 20px
-		margin-left: -40px
 		overflow: hidden
+		text-align: center
 
 	.button
 		color: white
 		cursor: pointer
 		text-align: center
 		float: left
-		margin-left: 45px
 		margin-top: 20px
 		@include transition-property(opacity)
 		@include transition-duration(0.20s)
+		width: 100px
+		display: inline-block
 
 		span 
 			background-image: url("../images/sprites.png")
@@ -192,7 +205,7 @@ body
 			span
 				background-position: 0px -40px
 
-		&.add-custom
+		&.add-bedroom
 			span
 				background-position: -40px -40px
 
