--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 html, body {
   width: 100%;
   height: 100%;
-  background-image: url("../images/grid.png");
 }
 
 body {
@@ -67,56 +66,72 @@ body {
   letter-spacing: 0.1em;
 }
 
+h1, h2, h3, h4, p, span, a {
+  -webkit-font-smoothing: 1px;
+}
+
 #kitchen {
   width: 200px;
   height: 200px;
   background-image: url("../roomplans/dining.png");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: 0px 0px;
-  background-color: transparent;
+  background-size: 200px 200px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
 }
 
 #living-room {
   width: 300px;
   height: 200px;
   background-image: url("../roomplans/LIVINGROOM_FULL.png");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-position: 0px 0px;
-  background-color: transparent;
+  background-size: 300px 200px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
 }
 
 #bathroom {
   width: 125px;
   height: 125px;
   background-image: url("../roomplans/BATHROOM_2.png");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: 0px 0px;
-  background-color: transparent;
+  background-size: 125px 125px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
 }
 
 #bedroom {
   width: 250px;
   height: 175px;
   background-image: url("../roomplans/BEDROOM_FULL_2.png");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: 0px 0px;
-  background-color: transparent;
+  background-size: 250px 175px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
 }
 
 .sandbox {
@@ -129,6 +144,7 @@ body {
   top: 0;
   bottom: 0;
   overflow: hidden;
+  background-image: url("../images/grid.png");
 }
 .sandbox .drag {
   -webkit-transition-property: left, top;
@@ -140,7 +156,7 @@ body {
   -o-transition-duration: 0.05s;
   transition-duration: 0.05s;
   overflow: hidden;
-  border: 1px solid #333333;
+  border: 2px solid #333333;
 }
 .sandbox .drag img {
   display: block;
@@ -164,9 +180,6 @@ body {
   -moz-transition-duration: 0.2s;
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
 }
 .sandbox .drag .info p {
   display: block;
@@ -189,22 +202,15 @@ body {
   left: 20px;
   top: 20px;
   bottom: 15px;
+  z-index: 1;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
   border-radius: 4px;
 }
-.Menu .inside {
-  padding: 25px;
-}
-.Menu h2 {
-  color: white;
-  font-weight: 400;
-}
 .Menu #logo {
   display: block;
-  margin-bottom: 25px;
 }
 .Menu .summary {
   overflow: hidden;
@@ -212,6 +218,12 @@ body {
   margin: 25px;
   padding-top: 25px;
   border-top: 1px solid #333333;
+}
+.Menu .summary h3 {
+  color: white;
+  font-weight: 800;
+  font-size: 14px;
+  margin-bottom: 10px;
 }
 .Menu .summary span {
   color: white;
@@ -233,10 +245,10 @@ body {
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
   border-radius: 4px;
-  -webkit-transition-property: bac;
-  -moz-transition-property: bac;
-  -o-transition-property: bac;
-  transition-property: bac;
+  -webkit-transition-property: background-color;
+  -moz-transition-property: background-color;
+  -o-transition-property: background-color;
+  transition-property: background-color;
   -webkit-transition-duration: 0.2s;
   -moz-transition-duration: 0.2s;
   -o-transition-duration: 0.2s;
@@ -306,6 +318,13 @@ body {
   height: 100%;
 }
 
+.inside {
+  padding: 25px;
+}
+.inside.big {
+  padding: 50px;
+}
+
 .table {
   display: table;
   width: 100%;
@@ -354,4 +373,58 @@ body {
   height: 5000px;
   margin-left: -2500px;
   margin-top: -2500px;
+}
+
+#send-project {
+  background-image: url("../images/trans-black.png");
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  z-index: 100;
+  display: none;
+}
+#send-project .window {
+  width: 500px;
+  height: 400px;
+  padding-top: 60px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -250px;
+  margin-top: -200px;
+  background-color: white;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+}
+#send-project .window p {
+  font-size: 14px;
+}
+#send-project .close {
+  background-image: url("../images/sprites.png");
+  background-repeat: no-repeat;
+  background-position: -40px -80px;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  cursor: pointer;
+  -webkit-transition-property: opacity;
+  -moz-transition-property: opacity;
+  -o-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+}
+#send-project .close:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+  opacity: 0.7;
 }
