--- a/sass/main.sass
+++ b/sass/main.sass
@@ -10,6 +10,7 @@ body
 	font-family: 'Roboto', sans-serif
 	line-height: 1.4
 	letter-spacing: 0.1em
+	background-image: url("../images/body-bg.png")
 
 h1, h2, h3, h4, p, span, a
 	-webkit-font-smoothing: 1px
@@ -28,8 +29,8 @@ h1, h2, h3, h4, p, span, a
 	background-color: transparent
 
 #kitchen
-	width: 200px
-	height: 200px
+	min-width: 200px
+	min-height: 200px
 	background-image: url("../roomplans/dining.png")
 	background-size: 200px 200px
 	@include room
@@ -66,7 +67,6 @@ h1, h2, h3, h4, p, span, a
 	top: 0
 	bottom: 0
 	overflow: hidden
-	background-image: url("../images/grid.png")
 
 	.drag 
 		@include transition-property(left, top)
@@ -86,7 +86,11 @@ h1, h2, h3, h4, p, span, a
 
 		.info 
 			text-align: center
-			height: 100%
+			position: absolute
+			bottom: 0
+			left: 0
+			right: 0
+			top: 0
 			@include opacity(0)
 			@include transition-property(opacity)
 			@include transition-duration(0.20s)
@@ -112,7 +116,6 @@ h1, h2, h3, h4, p, span, a
 	bottom: 15px
 	z-index: 1
 	@include border-radius(4px)
-	// overflow: auto
 
 	#logo 
 		display: block
@@ -274,7 +277,9 @@ h1, h2, h3, h4, p, span, a
 		@include border-radius(4px)
 
 		p 
-			font-size: 14px
+			font-size: 18px
+			font-weight: bold
+			color: #2fa88e
 
 	.close
 		background-image: url("../images/sprites.png")
@@ -292,4 +297,48 @@ h1, h2, h3, h4, p, span, a
 
 		&:hover 
 			@include opacity(0.7)
+
+#email
+	margin-top: 50px
+
+	input 
+		-webkit-appearance: none
+		border: 0px
+		background: none
+		outline: none
+		font-size: 18px
+		height: 50px
+		position: absolute
+		top: 0
+		left: 0
+		right: 0
+		bottom: 0
+		line-height: 100%
+
+	.input
+		position: relative
+		height: 50px
+		width: 80%
+		float: left
+		-webkit-box-sizing: border-box
+		-moz-box-sizing: border-box
+		box-sizing: border-box
+		border: 1px solid #2fa88e
+		@include border-left-radius(4px)
+
+		input
+			left: 10px
+
+	.submit 
+		position: relative
+		height: 50px
+		width: 20%
+		float: left
+		background-color: #2fa88e
+		@include border-right-radius(4px)
+
+		input 
+			color: white
+			cursor: pointer
+
 
